<resources>
    <string name="app_name">william Billaud</string>
    <string name="title_activity_login">Sign in</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Identifiant</string>
    <string name="prompt_password">Mot de passe</string>
    <string name="action_sign_in">Valider</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email completions."</string>
    <string name="identifiant">Identifiant</string>
    <string name="todo">TODO</string>
    <string name="mot_de_passe">Mot de Passe</string>
    <string name="connexion">Connexion</string>
    <string name="logo_isen">logo ISEN</string>
    <string name="bonjour">Bonjour</string>
    <string name="sauvegarde">Sauvegarde</string>
    <string name="cycle_de_vie">Cycle de vie</string>
    <string name="permission">Permission</string>
    <string name="disquette">Disquette</string>
    <string name="cycle_de_string_cycle_de_vie">Cycle de @string/cycle_de_vie</string>
    <string name="webservice">Webservice</string>
    <string name="textview">TextView</string>
    <string name="valider">Valider</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="button">Button</string>
    <string name="deconnexion">deconnexion</string>
    <string name="date_de_naissance">date de naissance</string>
    <string name="prenom">prenom</string>
    <string name="nom">nom</string>
    <string name="infos">Infos</string>
    <string name="acc_s_aux_informations_android">Accès aux informations Android</string>
    <string name="longitude">Longitude :</string>
    <string name="latitude">Latitude :</string>
    <string name="cameraicon">cameraIcon</string>
    <string name="name">nom :</string>
    <string name="numero">numero</string>
    <string name="nom_prenom">nom prenom</string>
</resources>
