<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">

    <Button
            android:text="@string/deconnexion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/disconnectHome"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp"/>
    <ImageView
            android:layout_width="320dp"
            android:layout_height="100dp" app:srcCompat="@drawable/isen_med_yncrea"
            android:id="@+id/imageView2"
            android:contentDescription="@string/logo_isen"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/disconnectHome"/>
    <TextView
            android:text="@string/bonjour"
            android:layout_width="128dp"
            android:layout_height="51dp"
            android:id="@+id/textView2"
            android:textSize="36sp"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/imageView2" android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent"/>
    <ImageView
            android:layout_width="80dp"
            android:layout_height="80dp" app:srcCompat="@android:drawable/ic_menu_save"
            android:id="@+id/SauvegardeIcon"
            android:background="@color/colorAccent"
            android:padding="20dp"
            android:contentDescription="@string/disquette"
            app:layout_constraintStart_toEndOf="@+id/PermissionIcon" app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/PermissionIcon"/>
    <ImageView
            android:layout_width="80dp"
            android:layout_height="80dp" app:srcCompat="@android:drawable/stat_sys_speakerphone"
            android:id="@+id/PermissionIcon"
            android:background="@color/colorAccent"
            android:padding="20dp" android:contentDescription="@string/permission"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="0.5" app:layout_constraintEnd_toStartOf="@+id/SauvegardeIcon"
            android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/textView2"/>
    <ImageView
            android:layout_width="80dp"
            android:layout_height="80dp" app:srcCompat="@android:drawable/stat_sys_download"
            android:id="@+id/webServiceIcon"
            android:background="@color/colorAccent"
            android:padding="20dp"
            android:contentDescription="@string/webservice"
            app:layout_constraintStart_toEndOf="@+id/lifeCycleIcon" app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/lifeCycleIcon"/>
    <ImageView
            android:layout_width="80dp"
            android:layout_height="80dp" app:srcCompat="@android:drawable/ic_dialog_email"
            android:id="@+id/lifeCycleIcon"
            android:background="@color/colorAccent"
            android:padding="20dp"
            android:contentDescription="@string/cycle_de_string_cycle_de_vie"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="0.5" app:layout_constraintEnd_toStartOf="@+id/webServiceIcon"
            android:layout_marginTop="44dp" app:layout_constraintTop_toBottomOf="@+id/textView"/>
    <TextView
            android:text="@string/permission"
            android:layout_width="wrap_content"
            android:layout_height="15dp"
            android:id="@+id/textView" android:layout_marginTop="1dp"
            app:layout_constraintTop_toBottomOf="@+id/PermissionIcon"
            app:layout_constraintStart_toStartOf="@+id/PermissionIcon"
            app:layout_constraintEnd_toEndOf="@+id/PermissionIcon"/>
    <TextView
            android:text="@string/sauvegarde"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView3" app:layout_constraintEnd_toEndOf="@+id/SauvegardeIcon"
            app:layout_constraintStart_toStartOf="@+id/SauvegardeIcon" app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintTop_toBottomOf="@+id/SauvegardeIcon"/>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView4" android:text="@string/cycle_de_vie"
            app:layout_constraintEnd_toEndOf="@+id/lifeCycleIcon"
            app:layout_constraintStart_toStartOf="@+id/lifeCycleIcon"
            app:layout_constraintTop_toBottomOf="@+id/lifeCycleIcon"/>
    <TextView
            android:text="@string/webservice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView5" app:layout_constraintEnd_toEndOf="@+id/webServiceIcon"
            app:layout_constraintStart_toStartOf="@+id/webServiceIcon"
            app:layout_constraintTop_toBottomOf="@+id/webServiceIcon"/>

</android.support.constraint.ConstraintLayout>