<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                             xmlns:app="http://schemas.android.com/apk/res-auto"
                                             xmlns:tools="http://schemas.android.com/tools"
                                             android:layout_width="match_parent"
                                             android:layout_height="match_parent">

    <TextView
            android:text="@string/name"
            android:layout_width="wrap_content"
            android:layout_height="38dp"
            android:id="@+id/textView12"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
            android:layout_marginTop="8dp" app:layout_constraintTop_toTopOf="parent"/>
    <TextView
            android:text="@string/nom_prenom"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:id="@+id/nomContact"
            app:layout_constraintTop_toTopOf="@+id/textView12"
            app:layout_constraintBottom_toBottomOf="@+id/textView12"
            app:layout_constraintStart_toEndOf="@+id/textView12"
            app:layout_constraintVertical_bias="0.0"/>
    <TextView
            android:text="@string/numero"
            android:layout_width="125dp"
            android:layout_height="0dp"
            android:id="@+id/numeroContact"
            app:layout_constraintTop_toTopOf="@+id/textView12"
            app:layout_constraintBottom_toBottomOf="@+id/textView12" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" app:layout_constraintStart_toEndOf="@+id/nomContact"
            android:layout_marginStart="8dp" app:layout_constraintHorizontal_bias="0.714"
            app:layout_constraintVertical_bias="0.0"/>
</android.support.constraint.ConstraintLayout>