<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".RegisterActivity">

    <android.support.design.widget.TextInputLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/nameRegister"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/surnameRegister" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" android:layout_marginEnd="8dp" app:layout_constraintEnd_toEndOf="parent">

        <android.support.design.widget.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/nom" android:id="@+id/nameRegisterField" android:inputType="textPersonName"/>
    </android.support.design.widget.TextInputLayout>
    <android.support.design.widget.TextInputLayout
            android:layout_width="0dp"
            android:layout_height="49dp"
            android:id="@+id/surnameRegister"
            app:layout_constraintTop_toBottomOf="@+id/nameRegister"
            app:layout_constraintBottom_toTopOf="@+id/birthRegister" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp">

        <android.support.design.widget.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/prenom" android:id="@+id/surnameRegisterField"
                android:inputType="textPersonName"/>
    </android.support.design.widget.TextInputLayout>
    <android.support.design.widget.TextInputLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/birthRegister"
            app:layout_constraintTop_toBottomOf="@+id/surnameRegister"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintHorizontal_bias="0.5" app:layout_constraintBottom_toTopOf="@+id/validateRegister">

        <android.support.design.widget.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/date_de_naissance" android:id="@+id/birthRegisterField"
                android:inputType="none"
                android:editable="false"
        />
    </android.support.design.widget.TextInputLayout>
    <Button
            android:text="@string/valider"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/validateRegister"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintEnd_toStartOf="@+id/registerInfo" android:layout_marginBottom="44dp"
            app:layout_constraintBottom_toBottomOf="parent"/>
    <Button
            android:text="@string/infos"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/registerInfo"
            app:layout_constraintTop_toTopOf="@+id/validateRegister"
            app:layout_constraintBottom_toBottomOf="@+id/validateRegister"
            app:layout_constraintStart_toEndOf="@+id/validateRegister" app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintEnd_toEndOf="parent"/>
</android.support.constraint.ConstraintLayout>