<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".LoginActivity">

    <TextView
            android:text="@string/connexion"
            android:layout_width="171dp"
            android:layout_height="42dp"
            android:id="@+id/textCoLogin" android:textSize="36sp"
            android:lineSpacingExtra="14sp"
            android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="parent" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toTopOf="@+id/imageView"/>
    <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" app:srcCompat="@drawable/isen_med_yncrea"
            android:id="@+id/imageView"
            android:contentDescription="@string/logo_isen"
            android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" android:layout_marginBottom="32dp"
            app:layout_constraintBottom_toTopOf="@+id/emailLogin" app:layout_constraintHorizontal_bias="0.621"
            android:layout_marginTop="8dp" app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="1.0"/>
    <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:id="@+id/emailLogin"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" android:layout_marginBottom="92dp"
            app:layout_constraintBottom_toTopOf="@+id/textInputLayout3" app:layout_constraintHorizontal_bias="1.0">

        <android.support.design.widget.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_email" android:inputType="textEmailAddress"
                android:id="@+id/emailLoginField"/>
    </android.support.design.widget.TextInputLayout>
    <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="53dp"
            android:id="@+id/textInputLayout3"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            android:layout_marginBottom="184dp" app:layout_constraintBottom_toTopOf="@+id/validationLogin"
            app:layout_constraintHorizontal_bias="1.0">

        <android.support.design.widget.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_password" android:inputType="textPassword"
                android:id="@+id/passLoginField"/>
    </android.support.design.widget.TextInputLayout>
    <Button
            android:text="@string/valider"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/validationLogin"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintHorizontal_bias="0.498" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent"/>
</android.support.constraint.ConstraintLayout>