<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".PermissionActivity">

    <TextView
            android:text="@string/acc_s_aux_informations_android"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView6"
            android:textSize="24sp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            android:layout_marginTop="8dp" app:layout_constraintTop_toTopOf="parent"/>
    <TextView
            android:text="@string/latitude"
            android:layout_width="0dp"
            android:layout_height="22dp"
            android:id="@+id/textView7"
            app:layout_constraintStart_toStartOf="@+id/textView9"
            app:layout_constraintEnd_toEndOf="@+id/textView9" android:layout_marginTop="20dp"
            app:layout_constraintTop_toBottomOf="@+id/textView6" app:layout_constraintHorizontal_bias="0.0"/>
    <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/latitudeEdit"
            app:layout_constraintStart_toEndOf="@+id/textView7"
            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintTop_toTopOf="@+id/textView7" app:layout_constraintBottom_toBottomOf="@+id/textView7"/>
    <TextView
            android:text="@string/longitude"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView9"
            app:layout_constraintStart_toEndOf="@+id/ImagePIcker"
            android:layout_marginStart="8dp" android:layout_marginTop="12dp"
            app:layout_constraintTop_toBottomOf="@+id/textView7"/>
    <TextView
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:id="@+id/longitudeEdit"
            app:layout_constraintStart_toEndOf="@+id/textView9"
            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintTop_toTopOf="@+id/textView9" app:layout_constraintBottom_toBottomOf="@+id/textView9"/>
    <ImageView
            android:layout_width="101dp"
            android:layout_height="66dp" app:srcCompat="@android:drawable/ic_menu_camera"
            android:id="@+id/ImagePIcker"
            android:contentDescription="@string/cameraicon"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
            android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/textView6"/>
    <ListView
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:id="@+id/listViewContact"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintHorizontal_bias="1.0" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/ImagePIcker"/>
</android.support.constraint.ConstraintLayout>